--- a/src/gui4/windows/kDrive client/kDrive client/Pages/ErrorPage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/ErrorPage.xaml
@@ -51,7 +51,7 @@
 
                 <!-- Header -->
                 <Border Background="#EEF1FC" Height="40" Grid.Row="0">
-                    <TextBlock Text="Application" VerticalAlignment="Center" Padding="16" Style="{StaticResource TextBlockStyle}" Foreground="#666666"/>
+                    <TextBlock x:Uid="ErrorPage_Application_Header" VerticalAlignment="Center" Padding="16" Style="{StaticResource TextBlockStyle}" Foreground="#666666"/>
                 </Border>
 
                 <!-- Content -->
@@ -63,7 +63,7 @@
                     </ImageIcon>
                     <StackPanel Orientation="Vertical" Grid.Row="1" Margin="16,14,0,0">
                         <TextBlock Text="Assistance technique" VerticalAlignment="Center" Style="{StaticResource TextBlockStyle}" Margin="0,0,0,4"/>
-                        <TextBlock Text="Veuillez contacter notre support client." VerticalAlignment="Center" Style="{StaticResource CaptionSemiBoldTextBlockStyle}" Margin="0,0,0,2" Foreground="#666666"/>
+                        <TextBlock x:Uid="ErrorPage_Application_HowTosolve" VerticalAlignment="Center" Style="{StaticResource CaptionSemiBoldTextBlockStyle}" Margin="0,0,0,2" Foreground="#666666"/>
                         <ListView 
                             SelectionMode="None" 
                             ItemsSource="{x:Bind ViewModel.AppErrors, Mode=OneWay}" 
@@ -89,7 +89,7 @@
                             </ListView.ItemTemplate>
                         </ListView>
                         <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="0,16,0,16" Spacing="4">
-                            <Button Content="Contacter le support" VerticalAlignment="Center"/>
+                            <Button Content="Contacter le support" VerticalAlignment="Center" Click="SupportButton_Click"/>
                             <HyperlinkButton Content="En savoir plus" VerticalAlignment="Center" NavigateUri="https://www.infomaniak.com/fr/support/faq/admin2/kdrive"/>
                         </StackPanel>
                     </StackPanel>
