--- a/src/gui4/windows/kDrive client/kDrive client/Pages/ActivityPage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/ActivityPage.xaml
@@ -1,51 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Page
-    x:Class="KDrive.ActivityPage"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KDrive"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:controls="using:KDrive.CustomControls"
-    xmlns:converters="using:KDrive.Converters"
-    xmlns:viewmodels="using:KDrive.ViewModels"
-    mc:Ignorable="d">
+<Page x:Class="KDrive.ActivityPage"
+      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:local="using:KDrive"
+      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:controls="using:KDrive.CustomControls"
+      xmlns:converters="using:KDrive.Converters"
+      xmlns:viewmodels="using:KDrive.ViewModels"
+      mc:Ignorable="d">
     <Page.Resources>
-        <converters:BooleanToVisibilityInverterConverter x:Key="BooleanToVisibilityInverterConverter"/>
-        <converters:BooleanToInvertedBooleanConverter x:Key="BooleanToInvertedBooleanConverter"/>
+        <converters:BooleanToVisibilityInverterConverter x:Key="BooleanToVisibilityInverterConverter" />
+        <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
+        <converters:BooleanToInvertedBooleanConverter x:Key="BooleanToInvertedBooleanConverter" />
     </Page.Resources>
 
-    <Grid Margin="24" RowSpacing="24" ColumnSpacing="24">
+    <Grid Margin="24"
+          RowSpacing="24"
+          ColumnSpacing="24">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="auto" />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <!-- Sync status bar -->
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
             <!-- Error bar -->
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
             <!-- Main content -->
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
             <!-- Upgrade offer bar -->
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
         <!-- Sync Status Bar -->
-        <controls:SyncStatusBar Grid.Row="0"/>
-        <CheckBox x:Name="ShowIncomingActivityCheckBox"  Grid.Row="0" Grid.Column="1" VerticalAlignment="Center" Content="Mon activité uniquement" IsChecked="{x:Bind ViewModel.SelectedSync.ShowIncomingActivity, Mode=TwoWay, Converter={StaticResource BooleanToInvertedBooleanConverter}}"/>
+        <controls:SyncStatusBar Grid.Row="0" />
+        <CheckBox x:Name="ShowIncomingActivityCheckBox"
+                  Grid.Row="0"
+                  Grid.Column="1"
+                  VerticalAlignment="Center"
+                  Content="Mon activité uniquement"
+                  IsChecked="{x:Bind ViewModel.SelectedSync.ShowIncomingActivity, Mode=TwoWay, Converter={StaticResource BooleanToInvertedBooleanConverter}}" />
 
         <!-- Error bar -->
-        <controls:SyncErrorBar Grid.Row="1" Grid.ColumnSpan="2"/>
+        <controls:SyncErrorBar Grid.Row="1"
+                               Grid.ColumnSpan="2"
+                               Visibility="{x:Bind ViewModel.HasErrors, Converter={StaticResource BooleanToVisibilityConverter}, Mode=OneWay}" />
 
         <!-- Left main pane -->
-        <controls:SyncActivityTable Grid.Row="2" Grid.ColumnSpan="2" ShowIncomingActivity="{x:Bind ViewModel.SelectedSync.ShowIncomingActivity, Mode=OneWay}" />
+        <controls:SyncActivityTable Grid.Row="2"
+                                    Grid.ColumnSpan="2"
+                                    ShowIncomingActivity="{x:Bind ViewModel.SelectedSync.ShowIncomingActivity, Mode=OneWay}" />
 
         <!-- Upgrade offer bar -->
-        <controls:KSuiteUpgradeBar
-        Grid.Row="3"
-        Grid.ColumnSpan="2"
-        Visibility="{x:Bind ViewModel.SelectedSync.Drive.IsPaidOffer, Mode=OneWay, Converter={StaticResource BooleanToVisibilityInverterConverter}}"
-        />
+        <controls:KSuiteUpgradeBar Grid.Row="3"
+                                   Grid.ColumnSpan="2"
+                                   Visibility="{x:Bind ViewModel.SelectedSync.Drive.IsPaidOffer, Mode=OneWay, Converter={StaticResource BooleanToVisibilityInverterConverter}}" />
 
     </Grid>
 </Page>
