style: Improve formatting in XAML files
Refactor XAML files for better readability by adding spaces and line breaks.
No functional changes were made; the focus was on enhancing maintainability and consistency across the codebase.

--- a/src/gui4/windows/kDrive client/kDrive client/App.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/App.xaml
@@ -17,11 +17,10 @@
  * along with this program.  If not, see<http://www.gnu.org/licenses/> .
  -->
 
-<Application
-    x:Class="KDrive.App"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KDrive">
+<Application x:Class="KDrive.App"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="using:KDrive">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
