--- a/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
@@ -17,112 +17,114 @@
  * along with this program.  If not, see<http://www.gnu.org/licenses/> .
  -->
 
-<Window
-    x:Class="KDrive.MainWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:KDrive"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    xmlns:viewModel="using:KDrive.ViewModels"
-    xmlns:converters="using:KDrive.Converters"
-    mc:Ignorable="d"
-    Title="kDrive client">
+<Window x:Class="KDrive.MainWindow"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:local="using:KDrive"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:viewModel="using:KDrive.ViewModels"
+        xmlns:converters="using:KDrive.Converters"
+        mc:Ignorable="d"
+        Title="kDrive client">
 
     <Window.SystemBackdrop>
         <!--<DesktopAcrylicBackdrop/> -->
         <!-- <MicaBackdrop Kind="BaseAlt"/> -->
-        <MicaBackdrop Kind="Base"/>
+        <MicaBackdrop Kind="Base" />
     </Window.SystemBackdrop>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto" />
             <!-- Title bar -->
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="*" />
             <!-- Remaining space for NavigationView -->
         </Grid.RowDefinitions>
 
         <!-- Title bar -->
-        <Border x:Name="AppTitleBar" 
-                Grid.Row="0" 
-                VerticalAlignment="Top"
-                >
-            <Grid Height="40" VerticalAlignment="Top" Margin="16,4">
+        <Border x:Name="AppTitleBar"
+                Grid.Row="0"
+                VerticalAlignment="Top">
+            <Grid Height="40"
+                  VerticalAlignment="Top"
+                  Margin="16,4">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto" />
                     <!-- Left: Logo + Text -->
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*" />
                     <!-- Middle: Search Box (centered) -->
-                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto" />
                     <!-- Right: Profile Picture -->
                 </Grid.ColumnDefinitions>
 
                 <!-- Left: Logo + App Name -->
-                <StackPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center" Spacing="8">
-                    <Image Source="/Assets/kdrive.png" Height="28" Width="28" />
+                <StackPanel Grid.Column="0"
+                            Orientation="Horizontal"
+                            VerticalAlignment="Center"
+                            Spacing="8">
+                    <Image Source="/Assets/kdrive.png"
+                           Height="28"
+                           Width="28" />
                     <TextBlock x:Name="AppTitle"
-                        Text="kDrive"
-                        FontSize="14"
-                        FontWeight="SemiBold"
-                        VerticalAlignment="Center"/>
+                               Text="kDrive"
+                               FontSize="14"
+                               FontWeight="SemiBold"
+                               VerticalAlignment="Center" />
                     <TextBlock x:Name="AppTitle_preview"
-                        Text="preview"
-                        FontSize="10"
-                        FontWeight="Light"
-                        VerticalAlignment="Center"
-                        Foreground="OrangeRed"
-                               />
+                               Text="preview"
+                               FontSize="10"
+                               FontWeight="Light"
+                               VerticalAlignment="Center"
+                               Foreground="OrangeRed" />
                 </StackPanel>
 
                 <!-- Middle: Search Box (centered in its column, which takes remaining space) -->
-                <AutoSuggestBox
-                    x:Uid="SearchBox"
-                    x:Name="SearchBox"
-                    Grid.Column="1"
-                    QueryIcon="Find"
-                    Width="300"
-                    Height="32"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    CornerRadius="3"
-                    BorderThickness="1"
-                    />
+                <AutoSuggestBox x:Uid="SearchBox"
+                                x:Name="SearchBox"
+                                Grid.Column="1"
+                                QueryIcon="Find"
+                                Width="300"
+                                Height="32"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
+                                CornerRadius="3"
+                                BorderThickness="1" />
             </Grid>
         </Border>
 
         <!-- NavigationView -->
-        <NavigationView x:Name="navView" 
+        <NavigationView x:Name="navView"
                         Grid.Row="1"
                         PaneDisplayMode="Left"
                         SelectionChanged="navView_SelectionChanged"
                         IsBackEnabled="{x:Bind contentFrame.CanGoBack, Mode=OneWay}"
-                        BackRequested="navView_BackRequested"
-                        >
+                        BackRequested="navView_BackRequested">
             <NavigationView.Resources>
-                <converters:StringPathToFileNameConverter x:Key="StringPathToFileNameConverter"/>
+                <converters:StringPathToFileNameConverter x:Key="StringPathToFileNameConverter" />
             </NavigationView.Resources>
 
             <NavigationView.PaneCustomContent>
                 <StackPanel>
-                    <ComboBox 
-                        x:Name="DriveComboBox" 
-                        Margin="10" Width="200" 
-                        Background="Transparent" 
-                        BorderBrush="Transparent" 
-                        ItemsSource="{x:Bind ViewModel.AllSyncs}"
-                        SelectedItem="{x:Bind ViewModel.SelectedSync, Mode=TwoWay}"
-                        IsEnabled="{x:Bind ViewModel.IsInitialized, Mode=OneWay}"
-                        >
+                    <ComboBox x:Name="DriveComboBox"
+                              Margin="10"
+                              Width="200"
+                              Background="Transparent"
+                              BorderBrush="Transparent"
+                              ItemsSource="{x:Bind ViewModel.AllSyncs}"
+                              SelectedItem="{x:Bind ViewModel.SelectedSync, Mode=TwoWay}"
+                              IsEnabled="{x:Bind ViewModel.IsInitialized, Mode=OneWay}">
                         <ComboBox.ItemTemplate>
                             <DataTemplate x:DataType="viewModel:Sync">
                                 <StackPanel Orientation="Horizontal">
-                                    <PersonPicture
-                                        Grid.Column="2"
-                                        ProfilePicture="https://learn.microsoft.com/windows/uwp/contacts-and-calendar/images/shoulder-tap-static-payload.png"
-                                        Height="24" Width="24"
-                                        VerticalAlignment="Center"
-                                        HorizontalAlignment="Right"/>
-                                    <TextBlock Text="{x:Bind Drive.Name}" Style="{StaticResource BodyTextBlockStyle}"  Margin="10,0"/>
+                                    <PersonPicture Grid.Column="2"
+                                                   ProfilePicture="https://learn.microsoft.com/windows/uwp/contacts-and-calendar/images/shoulder-tap-static-payload.png"
+                                                   Height="24"
+                                                   Width="24"
+                                                   VerticalAlignment="Center"
+                                                   HorizontalAlignment="Right" />
+                                    <TextBlock Text="{x:Bind Drive.Name}"
+                                               Style="{StaticResource BodyTextBlockStyle}"
+                                               Margin="10,0" />
                                     <TextBlock Text="{Binding LocalPath, Converter={StaticResource StringPathToFileNameConverter}}" />
                                 </StackPanel>
                             </DataTemplate>
@@ -133,32 +135,44 @@
             </NavigationView.PaneCustomContent>
 
             <NavigationView.MenuItems>
-                <NavigationViewItem x:Uid="NavHome" Tag="HomePage" MinHeight="30" IsSelected="True">
+                <NavigationViewItem x:Uid="NavHome"
+                                    Tag="HomePage"
+                                    MinHeight="30"
+                                    IsSelected="True">
                     <NavigationViewItem.Icon>
-                        <SymbolIcon Symbol="Home"/>
+                        <SymbolIcon Symbol="Home" />
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
-                <NavigationViewItem x:Uid="NavActivity" Tag="ActivityPage" MinHeight="30">
+                <NavigationViewItem x:Uid="NavActivity"
+                                    Tag="ActivityPage"
+                                    MinHeight="30">
                     <NavigationViewItem.Icon>
-                        <SymbolIcon Symbol="Sync"/>
+                        <SymbolIcon Symbol="Sync" />
                     </NavigationViewItem.Icon>
                     <NavigationViewItem.InfoBadge>
-                        <InfoBadge x:Name="infoBadge1" Value="4"/>
+                        <InfoBadge x:Name="infoBadge1"
+                                   Value="4" />
                     </NavigationViewItem.InfoBadge>
                 </NavigationViewItem>
-                <NavigationViewItem x:Uid="NavStorage" Tag="SamplePage3" MinHeight="30" IsEnabled="False">
+                <NavigationViewItem x:Uid="NavStorage"
+                                    Tag="SamplePage3"
+                                    MinHeight="30"
+                                    IsEnabled="False">
                     <NavigationViewItem.Icon>
-                        <SymbolIcon Symbol="MapDrive"/>
+                        <SymbolIcon Symbol="MapDrive" />
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
-                <NavigationViewItem x:Uid="NavFolder" Tag="SamplePage4" MinHeight="30" IsEnabled="False">
+                <NavigationViewItem x:Uid="NavFolder"
+                                    Tag="SamplePage4"
+                                    MinHeight="30"
+                                    IsEnabled="False">
                     <NavigationViewItem.Icon>
-                        <SymbolIcon Symbol="Folder"/>
+                        <SymbolIcon Symbol="Folder" />
                     </NavigationViewItem.Icon>
                 </NavigationViewItem>
             </NavigationView.MenuItems>
 
-            <Frame x:Name="contentFrame"/>
+            <Frame x:Name="contentFrame" />
         </NavigationView>
     </Grid>
 </Window>
