--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/KSuiteUpgradeBar.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/KSuiteUpgradeBar.xaml
@@ -67,15 +67,15 @@
                     </Image.Source>
                 </Image>
 
-                <!-- Home icon / message -->
+                <!-- kSuite icon / message -->
                 <TextBlock x:Uid="KSuiteUpgradeBar_message"
                            VerticalAlignment="Center"
                            Style="{StaticResource BodyTextBlockStyle}"
                            Grid.Column="1" />
 
-                <HyperlinkButton x:Uid="KSuiteUpgradeBar_link"
+                <HyperlinkButton 
+                                 x:Uid="KSuiteUpgradeBar_link"
                                  Margin="0,0,20,0"
-                                 NavigateUri="{x:Bind KSuiteUpgradeLink, Mode=OneTime}"
                                  Grid.Column="2"
                                  HorizontalAlignment="Right" />
             </Grid>
