refactor: Update namespace from KDrive to Infomaniak.kDrive
This commit refactors the codebase to change the namespace from `KDrive` to `Infomaniak.kDrive`.
All relevant files, including XAML and C# files, have been updated to reflect this new naming convention (herited from C# good practice)

--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/ErrorItem.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/ErrorItem.xaml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<UserControl x:Class="KDrive.CustomControls.ErrorItem"
+<UserControl x:Class="Infomaniak.kDrive.CustomControls.ErrorItem"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:KDrive.CustomControls"
+             xmlns:local="using:Infomaniak.kDrive.CustomControls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             xmlns:viewmodels="using:KDrive.ViewModels"
-             xmlns:converters="using:KDrive.Converters"
-             xmlns:viewmodels_error="using:KDrive.ViewModels.Errors"
+             xmlns:viewmodels="using:Infomaniak.kDrive.ViewModels"
+             xmlns:converters="using:Infomaniak.kDrive.Converters"
+             xmlns:viewmodels_error="using:Infomaniak.kDrive.ViewModels.Errors"
              mc:Ignorable="d">
     <UserControl.Resources>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
