--- a/src/gui4/windows/kDrive client/kDrive client/App.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/App.xaml
@@ -17,10 +17,10 @@
  * along with this program.  If not, see<http://www.gnu.org/licenses/> .
  -->
 
-<Application x:Class="KDrive.App"
+<Application x:Class="Infomaniak.kDrive.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:KDrive">
+             xmlns:local="using:Infomaniak.kDrive">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
