--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/KSuiteUpgradeBar.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/KSuiteUpgradeBar.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<UserControl x:Class="KDrive.CustomControls.KSuiteUpgradeBar"
+<UserControl x:Class="Infomaniak.kDrive.CustomControls.KSuiteUpgradeBar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:KDrive.CustomControls"
+             xmlns:local="using:Infomaniak.kDrive.CustomControls"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d">
