--- a/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/MainWindow.xaml
@@ -17,16 +17,16 @@
  * along with this program.  If not, see<http://www.gnu.org/licenses/> .
  -->
 
-<Window x:Class="KDrive.MainWindow"
+<Window x:Class="Infomaniak.kDrive.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:local="using:KDrive"
+        xmlns:local="using:Infomaniak.kDrive"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:viewModel="using:KDrive.ViewModels"
-        xmlns:converters="using:KDrive.Converters"
+        xmlns:viewModel="using:Infomaniak.kDrive.ViewModels"
+        xmlns:converters="using:Infomaniak.kDrive.Converters"
         mc:Ignorable="d"
-        Title="kDrive client">
+        Title="kDrive">
 
     <Window.SystemBackdrop>
         <!--<DesktopAcrylicBackdrop/> -->
