--- a/src/gui4/windows/kDrive client/kDrive client/Pages/ActivityPage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/ActivityPage.xaml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Page x:Class="KDrive.ActivityPage"
+<Page x:Class="Infomaniak.kDrive.ActivityPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:KDrive"
+      xmlns:local="using:Infomaniak.kDrive"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:controls="using:KDrive.CustomControls"
-      xmlns:converters="using:KDrive.Converters"
-      xmlns:viewmodels="using:KDrive.ViewModels"
+      xmlns:controls="using:Infomaniak.kDrive.CustomControls"
+      xmlns:converters="using:Infomaniak.kDrive.Converters"
+      xmlns:viewmodels="using:Infomaniak.kDrive.ViewModels"
       mc:Ignorable="d">
     <Page.Resources>
         <converters:BooleanToInvertedVisibilityConverter  x:Key="BooleanToInvertedVisibilityConverter" />
