--- a/src/gui4/windows/kDrive client/kDrive client/Pages/HomePage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/HomePage.xaml
@@ -17,14 +17,14 @@
  * along with this program.  If not, see<http://www.gnu.org/licenses/> .
  -->
 
-<Page x:Class="KDrive.HomePage"
+<Page x:Class="Infomaniak.kDrive.HomePage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:local="using:KDrive"
+      xmlns:local="using:Infomaniak.kDrive"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-      xmlns:controls="using:KDrive.CustomControls"
-      xmlns:converters="using:KDrive.Converters"
+      xmlns:controls="using:Infomaniak.kDrive.CustomControls"
+      xmlns:converters="using:Infomaniak.kDrive.Converters"
       mc:Ignorable="d">
     <Page.Resources>
         <converters:BooleanToInvertedVisibilityConverter  x:Key="BooleanToInvertedVisibilityConverter" />
