--- a/src/gui4/windows/kDrive client/kDrive client/Pages/ErrorPage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/ErrorPage.xaml
@@ -12,7 +12,7 @@
       mc:Ignorable="d">
     <Page.Resources>
         <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-        <converters:BooleanToInvertedVisibilityConverter  x:Key="BooleanToInvertedVisibilityConverter  " />
+        <converters:BooleanToInvertedVisibilityConverter  x:Key="BooleanToInvertedVisibilityConverter" />
         <converters:StringPathToFileNameConverter x:Key="StringPathToFileNameConverter" />
     </Page.Resources>
 
@@ -83,7 +83,7 @@
                     <StackPanel Orientation="Vertical"
                                 Grid.Row="1"
                                 Margin="16,14,0,0">
-                        <TextBlock Text="Assistance technique"
+                        <TextBlock x:Uid="ErrorPage_Application_Title"
                                    VerticalAlignment="Center"
                                    Style="{StaticResource TextBlockStyle}"
                                    Margin="0,0,0,4" />
@@ -122,12 +122,12 @@
                                     Grid.Row="2"
                                     Margin="0,16,0,16"
                                     Spacing="4">
-                            <Button Content="Contacter le support"
+                            <Button x:Uid="ErrorPage_Application_SolveButton"
                                     VerticalAlignment="Center"
                                     Click="SupportButton_Click" />
-                            <HyperlinkButton Content="En savoir plus"
+                            <HyperlinkButton x:Uid="ErrorPage_Application_LearnMoreButton"
                                              VerticalAlignment="Center"
-                                             NavigateUri="https://www.infomaniak.com/fr/support/faq/admin2/kdrive" />
+                                             Click="LearnMoreButton_Click" />
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
@@ -193,7 +193,7 @@
         <!-- Empty list-->
         <Grid CornerRadius="8"
               Grid.Row="3"
-              Visibility="{x:Bind ViewModel.HasErrors, Converter={StaticResource BooleanToInvertedVisibilityConverter }, Mode=OneWay}">
+              Visibility="{x:Bind ViewModel.HasErrors, Converter={StaticResource BooleanToInvertedVisibilityConverter}, Mode=OneWay}">
             <Border CornerRadius="8">
                 <Border.Background>
                     <AcrylicBrush TintColor="White"
