refactor: Update naming conventions for x:Uid (translations)
Renamed UI elements and resource keys to follow a new naming convention, improving clarity and organization. Updated `x:Uid` attributes in XAML files, modified `NavigateUri` in `KSuiteUpgradeBar.xaml.cs`, and ensured consistency in `Resources.resw`. Enhanced user guidance with updated text values for various UI elements.

--- a/src/gui4/windows/kDrive client/kDrive client/CustomControls/KSuiteUpgradeBar.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/CustomControls/KSuiteUpgradeBar.xaml
@@ -68,13 +68,13 @@
                 </Image>
 
                 <!-- kSuite icon / message -->
-                <TextBlock x:Uid="KSuiteUpgradeBar_message"
+                <TextBlock x:Uid="CC_KSuiteUpgradeBar_message"
                            VerticalAlignment="Center"
                            Style="{StaticResource BodyTextBlockStyle}"
                            Grid.Column="1" />
 
                 <HyperlinkButton x:Name="UpgradeHyperLinkButton"
-                                 x:Uid="KSuiteUpgradeBar_link"
+                                 x:Uid="CC_KSuiteUpgradeBar_link"
                                  Margin="0,0,20,0"
                                  Grid.Column="2"
                                  HorizontalAlignment="Right" />
