--- a/installer/windows/kDriveInstaller/Package.wxs
+++ b/installer/windows/kDriveInstaller/Package.wxs
@@ -37,9 +37,15 @@
 					  Execute="deferred"
 					  Impersonate="yes"
 					  Return="check" />
+        <CustomAction Id="CleanUpAppData"
+					  Directory="APPXFOLDER"
+					  ExeCommand="powershell.exe -WindowStyle hidden -ExecutionPolicy Bypass -File &quot;[INSTALLFOLDER]CleanUpAppData.ps1&quot;"
+					  Execute="deferred"
+					  Impersonate="yes"
+					  Return="check" />
         <CustomAction Id="UninstallExplorerExtension"
 					  Directory="APPXFOLDER"
-					  ExeCommand="powershell.exe -WindowStyle hidden -ExecutionPolicy Bypass -File &quot;[APPXFOLDER]Uninstall.ps1&quot;"
+					  ExeCommand="powershell.exe -WindowStyle hidden -ExecutionPolicy Bypass -File &quot;[APPXFOLDER]UninstallExtension.ps1&quot;"
 					  Execute="deferred"
 					  Impersonate="yes"
 					  Return="check" />
@@ -53,7 +59,8 @@
             <Custom Action="TaskKill" Before="InstallValidate" Condition="REMOVE=&quot;ALL&quot;" />
             <Custom Action="InstallExplorerExtension" Before="InstallFinalize" Condition="NOT REMOVE=&quot;ALL&quot;" />
             <Custom Action="RunApp" After="InstallFinalize" Condition="NOT REMOVE=&quot;ALL&quot;" />
-            <Custom Action="UninstallExplorerExtension" After="InstallInitialize" Condition="REMOVE=&quot;ALL&quot;" />
+            <Custom Action="CleanUpAppData" After="InstallInitialize" Condition="REMOVE=&quot;ALL&quot;" />
+            <Custom Action="UninstallExplorerExtension" After="CleanUpAppData" Condition="REMOVE=&quot;ALL&quot;" />
         </InstallExecuteSequence>
     </Package>
 </Wix>
